# diploma-project-drone-swarm

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
DJITelloPy/djitellopy/: tello.py
DJITelloPy/examples/: simple.py
app/: drone_interface.html  video_server.py
docs/: overview.md  scenario_requirements.md
mock/: drone.py  drone_server.py
templates/: index.html
utils/: check_distutil.py  video_streaming_endpoint.py
