[tool.poetry]
name = "drone-swarmx"
version = "0.1.0"
description = "A demo application for drone swarm stack"
authors = ["NMTAFE"]
license = "CC"

[tool.poetry.dependencies]
python = "^3.10"
DJITelloPy = { path = "./DJITelloPy" }

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.virtualenvs]
in-project = true
